src/objects/Apttus__WizardRuleset2__c.object
<CustomObject>
    <description>A collection of rules that are applied to input control and steps. The system determines a ruleset at the level of input control expression formula, determine focus objects, record type and step navigation rules.</description>
    <fields>
        <fullName>Apttus__AdvancedExpression__c</fullName>
        <description>Advanced expression that allows combination of AND and OR operators on rules.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Advanced expression that allows combination of AND and OR operators on rules.</inlineHelpText>
        <label>Advanced Expression</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__ContextObject__c</fullName>
        <description>Name of the object when the rule is of type &apos;Determine Focus Object&apos; or &apos;Determine Record Type&apos;</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Name of the object when the rule is of type &apos;Determine Focus Object&apos; or &apos;Determine Record Type&apos;</inlineHelpText>
        <label>Context Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__MetaPropertyFieldName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MetaPropertyFieldName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__RecordTypeId__c</fullName>
        <description>Record type that corresponds to the record types for the object</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Record type that corresponds to the record types for the object</inlineHelpText>
        <label>Record Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__ResultantValue__c</fullName>
        <description>The value that is determined by the condition being met.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The value that is determined by the condition being met.</inlineHelpText>
        <label>Resultant Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__RuleType__c</fullName>
        <description>Rule types that can be used for navigating the runtime wizard flow, determining the focus object and record type.</description>
        <inlineHelpText>Rule types that can be used for navigating the runtime wizard flow, determining the focus object and record type.</inlineHelpText>
        <label>Rule Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Determine Focus Object</fullName>
                </value>
                <value>
                    <fullName>Determine Record Type</fullName>
                </value>
                <value>
                    <fullName>Enable This Control</fullName>
                </value>
                <value>
                    <fullName>Disable This Control</fullName>
                </value>
                <value>
                    <fullName>Show This Control</fullName>
                </value>
                <value>
                    <fullName>Hide This Control</fullName>
                </value>
                <value>
                    <fullName>Set This Control Value</fullName>
                </value>
                <value>
                    <fullName>Go To Step</fullName>
                </value>
                <value>
                    <fullName>Go To Submit</fullName>
                </value>
                <value>
                    <fullName>Go To Abort</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Sequence__c</fullName>
        <description>Sequence of the ruleset within the step/input it belongs to.</description>
        <inlineHelpText>Sequence of the ruleset within the step/input it belongs to.</inlineHelpText>
        <label>Sequence</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__ToWizardStepId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Applicable to rule type &apos;Go To Step&apos;.</description>
        <inlineHelpText>Applicable to rule type &apos;Go To Step&apos;.</inlineHelpText>
        <label>Go To Wizard Step</label>
        <referenceTo>Apttus__WizardStep2__c</referenceTo>
        <relationshipLabel>Step Rulesets (To)</relationshipLabel>
        <relationshipName>StepRulesetsTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__WizardInputControlId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to Wizard Input Control</description>
        <inlineHelpText>Lookup to Wizard Input Control</inlineHelpText>
        <label>Wizard Input Control</label>
        <referenceTo>Apttus__WizardInputControl2__c</referenceTo>
        <relationshipLabel>Input Rulesets</relationshipLabel>
        <relationshipName>InputRulesets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__WizardStepId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to Wizard Step</description>
        <inlineHelpText>Lookup to Wizard Step</inlineHelpText>
        <label>Wizard Step</label>
        <referenceTo>Apttus__WizardStep2__c</referenceTo>
        <relationshipLabel>Step Rulesets</relationshipLabel>
        <relationshipName>StepRulesets</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Wizard Ruleset</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Ruleset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wizard Rulesets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>